dynamically_typed_tests/invalid/exit/exitNonInt.wacc
# exit with non-int - this should be an invalid program! 

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  x = 'f' ;
  exit x
end
